--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,4 +138,6 @@
 	</string>
     <string name="rx_map">RxAMap</string>
     <string name="rx_map_dec">Rx的使用</string>
+    <string name="poi">POI</string>
+    <string name="string_poi_error">POI的使用</string>
 </resources>
